# reapy

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  update_docs.py
dev/: publish_guide.md
docs/: api.json  requirements.txt
docs/source/: api_table.rst
examples/: create_track_n_record.py  load_n_control_fx.py  run_reascript_api.py
reapy/core/: __init__.py  __init__.pyi  envelope.py  envelope.pyi
reapy/core/fx/: fx.py
reapy/core/project/: __init__.py  __init__.pyi  commands.pyi  project.py  project.pyi  region.py  region.pyi
reapy/core/track/: __init__.py  __init__.pyi  info.py  send.py  track.py
