[metadata]
name = holoplot_reapy
author = Holoplot
author_email = developers@holoplot.com
version = file: VERSION
description = Reaper API based on RomeoDespres/reapy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automation, api, reaper, holoplot
license = Proprietary
home_page = https://github.com/holoplot/sw__pypi/holoplot_reapy
project_urls =
    Issue Tracker = https://holoplot.atlassian.net/browse/QA
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
include_package_data = True
packages = find:
python_requires= >=3.5

install_requires =
    setuptools
    psutil
    typing_extensions
