[metadata]
name = reapy-next
author = Jiajun Yang
author_email = thejyang@gmail.com
version = file: VERSION
description = Reaper API continue the legacy of RomeoDespres/reapy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automation, api, reaper, audio, music
license = MIT
home_page = https://github.com/wiccy46/reapy
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
include_package_data = True
packages = find:
python_requires= >=3.5

install_requires =
    setuptools
    psutil
    typing_extensions
